Fix: html>overflow-x>hidden

--- a/scss/_reset.scss
+++ b/scss/_reset.scss
@@ -9,6 +9,7 @@
 }
 
 html {
+  overflow-x: hidden;
   font-size: 62.5%;
   @include responsive(1200px) {
     font-size: 55%;
